# inverted_pendulum

./: CMakeLists.txt  README.md
Emm_V5/: CMakeLists.txt
Emm_V5/include/: EmmV5Driver.h
Emm_V5/src/: example.cpp  inverted_pendulum.cpp
haitai/: CMakeLists.txt
haitai/include/: HaitaiMotorController.h
haitai/src/: HaitaiMotorController.cpp  pendulum_lqr_controller.cpp
src/: EmmV5Driver.cpp  example.cpp  inverted_pendulum.cpp
